Fix table scroll not showing start of text

--- a/src/pages/Contribute.module.css
+++ b/src/pages/Contribute.module.css
@@ -69,15 +69,15 @@
   --species-card-width: min(400px, 90vw);
 }
 
-.table {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--dark-blue);
-
+.tableWrapper {
   max-width: 90vw;
   overflow-x: auto;
-  margin: 20px 0;
+}
+
+.table {
+  color: var(--dark-blue);
+
+  margin: 20px auto;
 }
 
 .table th {
@@ -86,7 +86,7 @@
 
 .table a {
   display: block;
-  width: 200px;
+  width: 150px;
 
   white-space: nowrap;
   overflow: hidden;
